Removed sandbox attributes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h1>Watch HIMYM</h1>
 
   <div id="epTitle"></div>
-  <iframe id="video" sandbox="allow-same-origin allow-scripts" allowfullscreen></iframe>
+  <iframe id="video" allowfullscreen></iframe>
   <div class="controls">
     <button onclick="prevEpisode()">Previous</button>
     <button onclick="nextEpisode()">Next</button>
